# std-token

./: .gitignore  ChangeLog.md  LICENSE  Makefile  NOTES.txt  README.md  changelog  package.yaml  stack.yaml  std-token.cabal
src/Text/: StdToken.hs
